bin/testsuite/tests/compiler/src/errors/compiler5576.swg
#global testerror "Err0576"

func toto()
{
    var _ = 0
}